# jaxstanv5

./: .gitignore  AGENTS.md  BACKLOG.md  IMPLEMENTATION_STEPS.md  MODEL_DECLARATIONS_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
docs/: bayeswire-migration.md  distribution-coverage.md  inferencedata-compatibility.md  invariants.md  ir-format-v1.md  ir-v1-tags.md  measurement_error_guide.html  model_declarations_guide.html  why_class_body_naming.html
rust/: AGENTS.md  BAYESITE_EXTRACTION.md  NOTICE  README.md  justfile
rust/jaxstanv5-core/: Cargo.toml
rust/jaxstanv5-core/src/: adapt.rs  density.rs  diagnostics.rs  error.rs  ir.rs  json.rs  lib.rs  linalg.rs  model.rs  nuts.rs  protocol.rs  rng.rs  sampler.rs  special.rs  tape.rs  tensor.rs  wasm_abi.rs
rust/jaxstanv5-core/tests/: cli.rs  diagnostics_fixture.rs  fixtures_eval.rs  ir_decode.rs  protocol.rs  sampler_stats.rs  special_table.rs
rust/jaxstanv5-core/tests/data/: diagnostics_fixture.json  special_fn_table.json
scripts/: benchmark_sampler_run_shape.py  benchmark_sampler_vertical_models.py  check_beta_binomial_sbc_reference.py  check_beta_binomial_stan_posterior_reference.py  check_beta_regression_sbc_reference.py  check_beta_regression_stan_posterior_reference.py  check_binomial_sbc_reference.py  check_binomial_stan_posterior_reference.py  check_gp_sbc_reference.py  check_gp_stan_posterior_reference.py  check_negative_binomial_sbc_reference.py  check_negative_binomial_stan_posterior_reference.py  check_ordinal_sbc_reference.py  check_ordinal_stan_posterior_reference.py  check_sbc_reference.py  (+13 more)
(+220 files in other folders)
