[project]
name = "jaxstanv5"
version = "0.1.0"
description = "A Python project built with the Astral stack: uv, ruff, and ty."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.0",
    "blackjax>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
root = ["./src", "./tests"]
