[package]
name = "jaxstanv5-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-dependency sampling core for jaxstanv5 IR documents"

# SETTLED: zero crates. `cargo tree` must show this crate and nothing else.
[dependencies]

[dev-dependencies]

[lib]
name = "jaxstanv5_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "jstan"
path = "src/bin/jstan.rs"

[profile.release]
opt-level = 3
lto = true
